objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AccountSegment__c</fullName>
        <description>Gets the segment of the account on the related opportunity</description>
        <formula>TEXT(Opportunity.Account.Segment__c)</formula>
        <inlineHelpText>The segment of the account on the related opportunity</inlineHelpText>
        <label>Account Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Fee_Deferred__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether we should use prorata calculation for upfront fees or not</description>
        <inlineHelpText>Determines whether we should use prorata calculation for upfront fees or not</inlineHelpText>
        <label>Amortised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Fee__c</fullName>
        <label>Agency Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Facility_Fee__c</fullName>
        <label>Annual Facility Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annualised_Income__c</fullName>
        <label>Annualised Income</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arranging_Fee_Deferred__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether we should use prorata calculation for upfront fees or not</description>
        <inlineHelpText>Determines whether we should use prorata calculation for upfront fees or not</inlineHelpText>
        <label>Amortised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arranging_Fee__c</fullName>
        <label>Arranging Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>For Loans, Credit balances and Overdraft facilities, insert new total facility size</inlineHelpText>
        <label>Balance / Facility Size</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Rate__c</fullName>
        <label>Client Base Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12m Jibar</fullName>
                </value>
                <value>
                    <fullName>6m Jibar</fullName>
                </value>
                <value>
                    <fullName>3m Jibar</fullName>
                </value>
                <value>
                    <fullName>1m Jibar</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Prime Linked</fullName>
                </value>
                <value>
                    <fullName>CPI Linked</fullName>
                </value>
                <value>
                    <fullName>12m Libor</fullName>
                </value>
                <value>
                    <fullName>6m Libor</fullName>
                </value>
                <value>
                    <fullName>3m Libor</fullName>
                </value>
                <value>
                    <fullName>1m Libor</fullName>
                </value>
                <value>
                    <fullName>12m Euribor</fullName>
                </value>
                <value>
                    <fullName>6m Euribor</fullName>
                </value>
                <value>
                    <fullName>3m Euribor</fullName>
                </value>
                <value>
                    <fullName>1m Euribor</fullName>
                </value>
                <value>
                    <fullName>I/BANK</fullName>
                </value>
                <value>
                    <fullName>182 day T-Bill</fullName>
                </value>
                <value>
                    <fullName>90 day T-Bill</fullName>
                </value>
                <value>
                    <fullName>BoZ Base</fullName>
                </value>
                <value>
                    <fullName>KBRR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Centre__c</fullName>
        <label>Booking Centre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absa Actuaries &amp; Consultants</fullName>
                </value>
                <value>
                    <fullName>Absa Capital Alternative Asset Management</fullName>
                </value>
                <value>
                    <fullName>Absa Capital Securities</fullName>
                </value>
                <value>
                    <fullName>Absa Capital Securities (PRIME)</fullName>
                </value>
                <value>
                    <fullName>Absa Card - Card Acquiring</fullName>
                </value>
                <value>
                    <fullName>Absa Card - Card Issuing</fullName>
                </value>
                <value>
                    <fullName>Absa Commercial Asset Finance</fullName>
                </value>
                <value>
                    <fullName>Absa Commercial Property Finance</fullName>
                </value>
                <value>
                    <fullName>Absa Financial Services</fullName>
                </value>
                <value>
                    <fullName>Absa Islamic Banking</fullName>
                </value>
                <value>
                    <fullName>Absa Vehicle And Commercial Asset Finance</fullName>
                </value>
                <value>
                    <fullName>Adjustments/Provisions - Commodities</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Asset Based Lending</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Bonds, Guarantees &amp; Indemnities</fullName>
                </value>
                <value>
                    <fullName>Call Deposits</fullName>
                </value>
                <value>
                    <fullName>Call Deposits FA</fullName>
                </value>
                <value>
                    <fullName>Capex Financing Solutions</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cash Handling Fees</fullName>
                </value>
                <value>
                    <fullName>Cash Management (Notional Pooling, Sweeping, etc)</fullName>
                </value>
                <value>
                    <fullName>Cheque Deposits</fullName>
                </value>
                <value>
                    <fullName>Commodities Trading</fullName>
                </value>
                <value>
                    <fullName>Credit Trading</fullName>
                </value>
                <value>
                    <fullName>Currency Deposits</fullName>
                </value>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Equity Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Export Credit Agency (ECA)</fullName>
                </value>
                <value>
                    <fullName>Financial Solutions Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Country</label>
        <referenceTo>Coverage_Country__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BulletAmount__c</fullName>
        <label>Bullet Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BulletPaymentDue__c</fullName>
        <label>Bullet Payment Due</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalculatedCommittmentCurrentYear__c</fullName>
        <label>Calculated Committment Fee Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedCommittmentNextYear__c</fullName>
        <label>Calculated Committment Fee Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedDeferredCurrentYear__c</fullName>
        <label>Calculated Arr Fee Deferred Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedDeferredNextYear__c</fullName>
        <label>Calculated Arr Fee Deferred Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedNetMarginCurrentYear__c</fullName>
        <label>Calculated Net Margin Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedNetMarginNextYear__c</fullName>
        <label>Calculated Net Margin Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedTotalPipelineCurrentYear__c</fullName>
        <label>Calculated Total Pipeline Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedTotalPipelineNextYear__c</fullName>
        <label>Calculated Total Pipeline Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedUpfrontCurrentYear__c</fullName>
        <label>Calculated Arr Fee Upfront Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalculatedUpfrontNextYear__c</fullName>
        <label>Calculated Arr Fee Upfront Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_ordination_Fee__c</fullName>
        <label>Co-ordination Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Committment_Fee__c</fullName>
        <label>Commitment Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compounding_Frequency__c</fullName>
        <label>Compounding Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coordination_Fee_Deferred__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether we should use prorata calculation for upfront fees or not</description>
        <inlineHelpText>Determines whether we should use prorata calculation for upfront fees or not</inlineHelpText>
        <label>Amortised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CrossSellOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether this opportunity line item was created through a trigger through the cross sell process.</description>
        <label>Cross Sell Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DG_TTC__c</fullName>
        <label>DG (TTC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>DG01</fullName>
                    <isActive>false</isActive>
                    <label>DG01</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTLGD__c</fullName>
        <label>DT LGD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DrawPercentageCurrentYear__c</fullName>
        <description>Draw Percentage Current Year used for the RPF Calculator</description>
        <label>Draw Percentage Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DrawPercentageNextYear__c</fullName>
        <description>Draw Percentage Next Year used for the RPF calculator</description>
        <label>Draw Percentage Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Utilisation__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Estimated Utilisation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Existing_Facility_Balance__c</fullName>
        <label>Existing Facility Balance</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilities_Off_Balance__c</fullName>
        <label>Facilities Off Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bilateral</fullName>
                </value>
                <value>
                    <fullName>Syndication</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Recovery_Description__c</fullName>
        <label>Fee Recovery Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Through the term</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Once-off Fees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlexiFee__c</fullName>
        <label>Flexi Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flexi__c</fullName>
        <label>Flexi</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ftp__c</fullName>
        <label>FTP/Cost of Funds (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FundingBaseRate__c</fullName>
        <label>Funding Base Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12m Jibar</fullName>
                </value>
                <value>
                    <fullName>6m Jibar</fullName>
                </value>
                <value>
                    <fullName>3m Jibar</fullName>
                </value>
                <value>
                    <fullName>1m Jibar</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Prime Linked</fullName>
                </value>
                <value>
                    <fullName>CPI Linked</fullName>
                </value>
                <value>
                    <fullName>12m Libor</fullName>
                </value>
                <value>
                    <fullName>6m Libor</fullName>
                </value>
                <value>
                    <fullName>3m Libor</fullName>
                </value>
                <value>
                    <fullName>1m Libor</fullName>
                </value>
                <value>
                    <fullName>12m Euribor</fullName>
                </value>
                <value>
                    <fullName>6m Euribor</fullName>
                </value>
                <value>
                    <fullName>3m Euribor</fullName>
                </value>
                <value>
                    <fullName>1m Euribor</fullName>
                </value>
                <value>
                    <fullName>I/BANK</fullName>
                </value>
                <value>
                    <fullName>182 day T-Bill</fullName>
                </value>
                <value>
                    <fullName>90 day T-Bill</fullName>
                </value>
                <value>
                    <fullName>BoZ Base</fullName>
                </value>
                <value>
                    <fullName>KBRR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingRateType__c</fullName>
        <label>Funding Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Floating</fullName>
                </value>
                <value>
                    <fullName>Prime Linked</fullName>
                </value>
                <value>
                    <fullName>I/BANK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLGD__c</fullName>
        <label>CLGD (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hold_Size__c</fullName>
        <label>Hold Size</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_this_Year__c</fullName>
        <label>Income this Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LGD__c</fullName>
        <label>LR LGD (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <label>Loan To Value (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LoanType__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Restructure</fullName>
                </value>
                <value>
                    <fullName>New Money</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Profile__c</fullName>
        <label>Loan Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amort</fullName>
                </value>
                <value>
                    <fullName>Bullet</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>Interest Capitalisation</fullName>
                </value>
                <value>
                    <fullName>Interest Only</fullName>
                </value>
                <value>
                    <fullName>Sculpted</fullName>
                </value>
                <value>
                    <fullName>Stepped Capital</fullName>
                </value>
                <value>
                    <fullName>Stepped Installment</fullName>
                </value>
                <value>
                    <fullName>Straight Line Capital Repayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net Margin (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Facility_Balance__c</fullName>
        <label>Net Facility Balance</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewCapital__c</fullName>
        <label>New Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Facility_Balance__c</fullName>
        <label>New Facility Balance</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Facility__c</fullName>
        <inlineHelpText>Income from today&apos;s date to the same date next year</inlineHelpText>
        <label>New Facility Annualised Income</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityCountry__c</fullName>
        <description>Returns the Country of the related Opportunity</description>
        <formula>TEXT(Opportunity.Opportunity_Country__c)</formula>
        <inlineHelpText>Returns the Country of the related Opportunity</inlineHelpText>
        <label>Opportunity Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Fees_Deferred__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether we should use prorata calculation for upfront fees or not</description>
        <inlineHelpText>Determines whether we should use prorata calculation for upfront fees or not</inlineHelpText>
        <label>Amortised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Fees__c</fullName>
        <inlineHelpText>Annual renewal, Management fees, Special fees</inlineHelpText>
        <label>Other Fees (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTEA__c</fullName>
        <description>Gives the PTEA calculation used in the net margin calculation</description>
        <formula>IF( 
NOT(ISBLANK(Product_Level_3__c)) &amp;&amp; Product_Level_3__r.Name = &apos;Preference Shares&apos;, 
TEXT(ROUND((Gross_Margin__c / (1 - VALUE($Label.PreferenceSharesTaxRate))) * VALUE($Label.PreferenceSharesTaxRate) * 100,2)), 
&apos;N/A&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gives the PTEA calculation used in the net margin calculation</inlineHelpText>
        <label>PTEA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_Fee_Deferred__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether we should use prorata calculation for upfront fees or not</description>
        <inlineHelpText>Determines whether we should use prorata calculation for upfront fees or not</inlineHelpText>
        <label>Amortised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participation_Fee__c</fullName>
        <label>Participation Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Banking_Target__c</fullName>
        <label>Primary Banking Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Undisclosed</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductLevel3Count__c</fullName>
        <description>Determines whether the opportunity line item has a level 3 Product or not</description>
        <formula>IF(ISBLANK(Product_Level_3__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Level 3 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the user responsible for approving the opportunity when a product is added to an opportunity</description>
        <label>Product Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Level_2_Name__c</fullName>
        <description>Gets the name of the Product level 2</description>
        <formula>Product_Level_2__r.Name</formula>
        <label>Product Level 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 2</label>
        <referenceTo>Product_Level_2__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Level_3_Name__c</fullName>
        <formula>Product_Level_3__r.Name</formula>
        <label>Product Level 3 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 3</label>
        <referenceTo>Product_Level_3__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROEC__c</fullName>
        <label>ROEC (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RORC1stYear__c</fullName>
        <label>RORC (1st Year %)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RORC__c</fullName>
        <label>RORC (Lifetime %)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RWA1stYear__c</fullName>
        <label>RWA (1st Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA__c</fullName>
        <label>RWA (Lifetime)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Client Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Floating</fullName>
                </value>
                <value>
                    <fullName>Prime Linked</fullName>
                </value>
                <value>
                    <fullName>I/BANK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Fees_Period__c</fullName>
        <label>Recurring Fees Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recurring Fees</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RefinanceAmount__c</fullName>
        <label>Refinance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RefinanceIncreaseDecrease__c</fullName>
        <description>If the user selects that this is a refinance, this field determines whether this is an increase, decrease or unchanged refinance amount</description>
        <label>Refinance Increase/Decrease</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increase</fullName>
                </value>
                <value>
                    <fullName>Decrease</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoRWA1stYear__c</fullName>
        <label>RoRWA (1st Year %)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>